--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,7 +18,7 @@
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.5.3",
     "web-vitals": "^2.1.4"
