--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.5",
     "create-react-app": "^5.0.1",
     "express": "^4.18.2",
+    "google-auth-library": "^8.7.0",
     "jquery": "^3.6.1",
     "nodemon": "^2.0.20",
     "socket.io": "^4.5.3",
